--- a/ClsMod/ClsDatOT.csproj
+++ b/ClsMod/ClsDatOT.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UtilidadesNorson">
-      <HintPath>..\..\..\UtilidadesNorson.dll</HintPath>
+      <HintPath>..\..\..\..\DLLS\UtilidadesNorson.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
