--- a/OrdenesTrabajo/OrdenesTrabajo.csproj
+++ b/OrdenesTrabajo/OrdenesTrabajo.csproj
@@ -117,6 +117,9 @@
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.7\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="UtilidadesNorson">
+      <HintPath>..\..\..\..\DLLS\UtilidadesNorson.dll</HintPath>
+    </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
       <HintPath>..\packages\WebGrease.1.6.0\lib\WebGrease.dll</HintPath>
