--- a/ClsMod/ClsDatOT.csproj
+++ b/ClsMod/ClsDatOT.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClsDatCatImagenes.cs" />
     <Compile Include="ClsDatCatOT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
