--- a/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2.csproj
@@ -5,14 +5,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="iTextSharp" Version="5.5.13.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.13" />
     <PackageReference Include="Microsoft.NETCore.App" Version="2.2.8" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ClsMod2\ClsModOT.csproj" />
     <ProjectReference Include="..\ClsNeg2\ClsNegOT.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="UtilidadesNorson">
+      <HintPath>..\..\..\..\DLLS\UtilidadesNorson.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 
